--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ScanActivity" />
+        <activity android:name=".CardActivity" />
+        <activity android:name=".AddCardActivity"></activity>
     </application>
 
 </manifest>
