--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     //implementation 'com.journeyapps:zxing-android-embedded:3.6.0@aar'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.android.support:design:28.0.0'
 
 }
